transition small fix

--- a/style.css
+++ b/style.css
@@ -98,8 +98,7 @@ h2 {
   border: solid var(--main-orange) 2px;
   border-radius: 2rem;
   margin-right: 3rem;
-  transition: color 0.4s ease;
-  transition: background-color 0.4s ease;
+  transition: all 0.4s ease;
 }
 
 #nav-contact:hover {
@@ -254,8 +253,7 @@ h2 {
   border: solid var(--main-orange) 2px;
   border-radius: 2rem;
   padding: 0.7rem;
-  transition: color 0.4s ease;
-  transition: background-color 0.4s ease;
+  transition: all 0.4s ease;
 }
 
 .orange-btn:hover {
